package com.g02.flightsalesfx.businessLogic;

public class TicketImpl {
}
