@startuml test
skinparam classAttributeIconSize 0
skinparam componentStyle uml2
'left to right direction
hide circle

class Flight {
    +arrvial
    +departure
    +flightnumber
    +price
}


class PriceReduction {
    +endDate
}

class StaticPriceReduction extends PriceReduction {
    +percentage
}

class DynamicPriceReduction extends PriceReduction {
    +source
}

class Route {
}

class Airport {
    +name
    +city
    +country
}

class Booking {
    +bookingDate: Date
    +totalPrice
}

class Ticket {
    +name
    +seatNumber
    +rowNumber
}

class Plane {
    +name
    +type
    +manufacturer
}

class Seat {
    +seatNumber
    +rowNumber
}

class Option {
    +price
    +name
}

class SeatOption extends Option {
    +isSelected
}

class FlightOption extends Option {
    +maxAvailible
}

class Employee {
    +name
    +email
    +password
}

class SalesEmployee extends Employee {

}

class SalesOfficer extends Employee {

}

class SalesManager extends Employee {

}

Booking "*" -- "1" Flight
SalesOfficer "1" -l- "*" Flight: \t\t\t
SalesEmployee "1" -- "*" Booking
Ticket "1..*" --- "1" Booking
Flight "1..*" -- "1" Route
Route "*" -- "1" Airport: arrives at port
Route "*" -- "1" Airport: departs from port
Flight "1..*" -- "*" PriceReduction
SeatOption "*" - "1" Seat: \t
Plane "1" -left- "1..*" Seat: \t
Flight "*" -- "1" Plane
note on link
A plane can only be
associated with one active
flight at a time
end note
Ticket "0..1" -- "1" Seat
FlightOption "*" - "1" Flight
FlightOption "*" - "*" Booking: \t

@enduml